crates/reinhardt-pages/tests/ui/server_fnset/fail/endpoint_collision.stderr
error[E0428]: the name `article_fns` is defined multiple times
 --> tests/ui/server_fnset/fail/endpoint_collision.rs:8:1
  |
6 | #[server_fnset(for = article_fns)]
  | ---------------------------------- previous definition of the module `article_fns` here
7 | impl Actions {}
8 | #[server_fnset(for = article_fns)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `article_fns` redefined here
  |
  = note: `article_fns` must be defined only once in the type namespace of this module
  = note: this error originates in the macro `__reinhardt_generate_server_fnset_Actions` which comes from the expansion of the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `ServerFnSetActions<ArticleResource>` for type `Actions`
 --> tests/ui/server_fnset/fail/endpoint_collision.rs:8:1
  |
6 | #[server_fnset(for = article_fns)]
  | ---------------------------------- first implementation here
7 | impl Actions {}
8 | #[server_fnset(for = article_fns)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Actions`
  |
  = note: this error originates in the macro `__reinhardt_generate_server_fnset_Actions` which comes from the expansion of the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)
